--- a/Lablar/XML/parser.ipynb
+++ b/Lablar/XML/parser.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lxml import etree\n"
+    "from lxml import etree"
    ]
   },
   {
