--- a/Lablar/1_XML/parser.ipynb
+++ b/Lablar/1_XML/parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,18 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "kitaplar {}\n",
-      "plaklar {}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "root = tree.getroot()\n",
     "for child in root:\n",
@@ -41,18 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "katalog\n",
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(root.tag)\n",
     "print(len(root))"
@@ -60,18 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "plak {}\n",
-      "plak {}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "plaklar = root[1]\n",
     "for plak in plaklar:\n",
@@ -80,18 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "kitap {'id': 'bk1'}\n",
-      "kitap {'id': 'bk2', 'baskı': '3. baskı'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "kitaplar = root[0]\n",
     "for kitap in kitaplar:\n",
@@ -100,18 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "kitap\n",
-      "bk1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ilk_kitap = kitaplar[0]\n",
     "print(ilk_kitap.tag)\n",
@@ -128,7 +83,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tfnew",
+   "display_name": "mlenv",
    "language": "python",
    "name": "python3"
   },
